# -ml-algo-trading-system

./: .gitignore  INSTRUCTIONS.txt  README.md  README.txt
algo_trading/: CMakeLists.txt
algo_trading/data/: sample_AAPL.csv
algo_trading/src/: BacktestingEngine.h  MarketDataEvent.h  MovingAverageStrategy.h  Portfolio.h  ThreadSafeQueue.h  Trade.h  TradeLogger.h  TradingStrategy.h  Utils.h  main.cpp  ml_client.h
backend_python/: main_ml_api.py  requirements.txt  train_model.py
